fix: ошибка в названии метода